// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadCsv should render the DownloadCsv component 1`] = `
<div>
  <button
    class="download-csv-button svelte-wktmji"
    data-testid="download-csv-button"
    title="Download CSV (max 1000)"
  >
     
    <div
      class=" svelte-zpbvvv"
      style="--icon-width: 24px; --icon-height: 24px;"
    >
      <object
        src="ic-download.svg/"
      />
    </div>
  </button>
</div>
`;

exports[`DownloadCsv should render the DownloadCsv component with a label 1`] = `
<div>
  <button
    class="download-csv-button svelte-wktmji"
    data-testid="download-csv-button"
    title="Download CSV (max 1000)"
  >
    <span
      class="svelte-wktmji"
    >
      test-label
    </span>
     
    <div
      class=" svelte-zpbvvv"
      style="--icon-width: 24px; --icon-height: 24px;"
    >
      <object
        src="ic-download.svg/"
      />
    </div>
  </button>
</div>
`;
